Corrected an overflow error

--- a/index.css
+++ b/index.css
@@ -162,6 +162,6 @@ header > div {
     }
 
     .slack-details img {
-        width: 400px;
+        width: 350px;
     }
 }
